# LearnCUDA

./: .clang-format  CMakeLists.txt
include/: common.h
src/: 1_hello_world.cu  2_device_info.cu  3_sum_arrays.cu  4_sum_matrix.cu  CMakeLists.txt
